# Steemit-Fork-2.0

./: .gitignore  Builder.DockerFile  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Doxyfile  LICENSE.md  README.md  circle.yml  cloudbuild.yaml
ciscripts/: buildfailure.sh  buildpending.sh  buildscript.sh  buildsuccess.sh  buildtests.sh
contrib/: paas-sv-run.sh  pulltestnetscripts.sh  startpaassteemd.sh  steemd.run  steemdentrypoint.sh  sync-sv-run.sh
doc/: building.md  exchangequickstart.md  git-guidelines.md  mira-tuning.md  mira.md  quickstart.md  seednodes.txt  witness_parameters.md
doc/devs/: 2018-08-20-resource-notes.md  Python-Debug-Node.md  api-notes.md  (+7 more)
libraries/chain/: CMakeLists.txt  block_log.cpp  comment_rewards.cpp  database.cpp  fork_database.cpp  generic_custom_operation_interpreter.cpp  index.cpp  optional_action_evaluator.cpp  required_action_evaluator.cpp  shared_authority.cpp  smt_evaluator.cpp  sps_evaluator.cpp  steem_evaluator.cpp  steem_objects.cpp  witness_schedule.cpp
libraries/chain/include/steem/chain/: account_object.hpp  block_log.hpp  block_summary_object.hpp  buffer_type.hpp  comment_object.hpp  comment_rewards.hpp  compound.hpp  custom_operation_interpreter.hpp  database.hpp  database_exceptions.hpp  db_with.hpp  evaluator.hpp  evaluator_registry.hpp  fork_database.hpp  generic_custom_operation_interpreter.hpp  global_property_object.hpp  hardfork_property_object.hpp  history_object.hpp  index.hpp  multi_index_types.hpp  node_property_object.hpp  notifications.hpp  optional_action_evaluator.hpp  pending_optional_action_object.hpp  pending_required_action_object.hpp  required_action_evaluator.hpp  schema_types.hpp  shared_authority.hpp  shared_db_merkle.hpp  smt_objects.hpp  sps_objects.hpp  steem_evaluator.hpp  steem_fwd.hpp  steem_object_types.hpp  steem_objects.hpp  transaction_notification.hpp  transaction_object.hpp  vesting.hpp  witness_objects.hpp  witness_schedule.hpp
libraries/chain/include/steem/chain/schema_types/: oid.hpp
libraries/chain/include/steem/chain/smt_objects/: account_balance_object.hpp  nai_pool.hpp  nai_pool_object.hpp  smt_market_maker.hpp  smt_token_object.hpp
libraries/chain/include/steem/chain/util/: advanced_benchmark_dumper.hpp  asset.hpp  impacted.hpp  manabar.hpp  nai_generator.hpp  rd_dynamics.hpp  rd_setup.hpp  reward.hpp  signal.hpp  smt_token.hpp  sps_helper.hpp  sps_processor.hpp  uint256.hpp
libraries/chain/smt_objects/: nai_pool.cpp  smt_market_maker.cpp
libraries/chain/util/: advanced_benchmark_dumper.cpp  impacted.cpp  rd.cpp  reward.cpp  smt_token.cpp  sps_helper.cpp  sps_processor.cpp
libraries/legacy_plugins/account_statistics/: CMakeLists.txt  account_statistics_api.cpp  account_statistics_plugin.cpp  plugin.json
libraries/legacy_plugins/account_statistics/include/steem/account_statistics/: account_statistics_api.hpp  account_statistics_plugin.hpp
libraries/legacy_plugins/auth_util/: CMakeLists.txt  auth_util_api.cpp  auth_util_plugin.cpp  plugin.json
libraries/legacy_plugins/auth_util/include/steem/plugins/auth_util/: auth_util_api.hpp  auth_util_plugin.hpp
libraries/legacy_plugins/block_info/: CMakeLists.txt  block_info_api.cpp  block_info_plugin.cpp  plugin.json
libraries/legacy_plugins/block_info/include/steem/plugins/block_info/: block_info.hpp  block_info_api.hpp  block_info_plugin.hpp
libraries/legacy_plugins/blockchain_statistics/: CMakeLists.txt  blockchain_statistics_api.cpp  blockchain_statistics_plugin.cpp  plugin.json
libraries/legacy_plugins/blockchain_statistics/include/steem/blockchain_statistics/: blockchain_statistics_api.hpp  blockchain_statistics_plugin.hpp
libraries/legacy_plugins/delayed_node/: CMakeLists.txt  delayed_node_plugin.cpp  plugin.json
libraries/legacy_plugins/delayed_node/include/steem/delayed_node/: delayed_node_plugin.hpp
libraries/legacy_plugins/private_message/: CMakeLists.txt  plugin.json  private_message_plugin.cpp
libraries/legacy_plugins/private_message/include/steem/private_message/: private_message_evaluators.hpp  private_message_operations.hpp  private_message_plugin.hpp
libraries/legacy_plugins/raw_block/: CMakeLists.txt  plugin.json  raw_block_api.cpp  raw_block_plugin.cpp
libraries/legacy_plugins/raw_block/include/steem/plugins/raw_block/: raw_block_api.hpp  raw_block_plugin.hpp
libraries/protocol/: CMakeLists.txt  asset.cpp  authority.cpp  block.cpp  get_config.cpp  operations.cpp  schema_types.cpp  sign_state.cpp  smt_operations.cpp  smt_util.cpp  sps_operations.cpp  steem_operations.cpp  steem_optional_actions.cpp  steem_required_actions.cpp  transaction.cpp  types.cpp  version.cpp
libraries/protocol/hardfork.d/: 0-preamble.hf  0_1.hf  0_10.hf  0_11.hf  0_12.hf  0_13.hf  0_14.hf  0_15.hf  0_16.hf  0_17.hf  0_18.hf  0_19.hf  0_2.hf  0_20.hf  0_21.hf  0_22.hf  0_23.hf  0_3.hf  0_4.hf  0_5.hf  0_6.hf  0_7.hf  0_8.hf  0_9.hf
libraries/protocol/include/steem/protocol/: asset.hpp  asset_symbol.hpp  authority.hpp  base.hpp  block.hpp  block_header.hpp  config.hpp  exceptions.hpp  fixed_string.hpp  get_config.hpp  legacy_asset.hpp  misc_utilities.hpp  operation_util.hpp  operation_util_impl.hpp  operations.hpp  optional_automated_actions.hpp  protocol.hpp  required_automated_actions.hpp  schema_types.hpp  sign_state.hpp  smt_operations.hpp  smt_util.hpp  sps_operations.hpp  steem_operations.hpp  steem_optional_actions.hpp  steem_required_actions.hpp  steem_virtual_operations.hpp  transaction.hpp  transaction_util.hpp  types.hpp  types_fwd.hpp  validation.hpp  version.hpp
libraries/protocol/include/steem/protocol/schema_types/: account_name_type.hpp  asset_symbol_type.hpp  fixed_string.hpp
libraries/schema/: CMakeLists.txt  schema.cpp
libraries/schema/include/steem/schema/: abstract_schema.hpp  schema.hpp  schema_impl.hpp  schema_types.hpp
libraries/schema/include/steem/schema/schema_types/: flat_map.hpp  flat_set.hpp  optional.hpp  pair.hpp  static_variant.hpp  vector.hpp
programs/: CMakeLists.txt
programs/steemd/: CMakeLists.txt  main.cpp
python_scripts/: setup.py
tests/: CMakeLists.txt  README.md
(+345 files in other folders)
